Fix content overflow in the CSS stylings

--- a/Frontend/signup/signup.css
+++ b/Frontend/signup/signup.css
@@ -3,7 +3,8 @@
 }
 
 #tab_area {
-    flex-shrink: 0;
+    min-height: 0px;
+    flex-shrink: 1;
     display: flex;
     flex-flow: column;
     height: 100%;
@@ -19,6 +20,7 @@
 }
 
 #debug {
+    min-height: 0px;
     flex-grow: 1;
     display: flex;
     flex-direction: row;
@@ -26,6 +28,7 @@
 }
 
 #sent, #received {
-    min-width: 100px;
     flex-grow: 1;
+    min-width: 100px;
+    overflow: scroll;
 }
